fix dark mode color; add social media icons

--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -15,12 +15,12 @@
 }
 [data-md-color-scheme="slate"] {
 
-    --md-default-bg-color:             hsla(0, 0%, 20%, 1);
-    --md-default-bg-color--light:      hsla(0, 0%, 20%, 0.54);
-    --md-default-bg-color--lighter:    hsla(0, 0%, 20%, 0.26);
-    --md-default-bg-color--lightest:   hsla(0, 0%, 20%, 0.07);
+    --md-default-bg-color:             hsla(0, 0%, 9%, 1);
+    --md-default-bg-color--light:      hsla(0, 0%, 9%, 0.54);
+    --md-default-bg-color--lighter:    hsla(0, 0%, 9%, 0.26);
+    --md-default-bg-color--lightest:   hsla(0, 0%, 9%, 0.07);
 
-    --md-code-bg-color:                hsla(0, 0%, 20%, 1);
+    --md-code-bg-color:                hsla(0, 0%, 9%, 1);
 
     --md-footer-bg-color:              hsla(0, 0%, 10%, 0.87);
     --md-footer-bg-color--dark:        hsla(0, 0%, 4%, 1);
